[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iol"
version = "0.1.0"
description = "IOL API helpers"
authors = [
    { name = "Gustavo M Domato", email = "gm.domato@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/karlosrovira/iol"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]